# grandine-py

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  grandine_py.pyi  pyproject.toml
.github/workflows/: cargo-audit.yml  pre-commit.yml  pytest.yml  verify-spec-values-grandine.yml  verify-spec-values.yml
spec/: verify_presets_rust.py
src/: lib.rs  macros.rs  preset_gnosis.rs
src/electra/: block.rs
tests/: conftest.py  test_block_methods.py  test_electra_gnosis.py  test_electra_mainnet.py  test_electra_minimal.py
tests/electra/: conftest.py  test_block.py
tests/electra/fixtures/: gnosis-26539000.json  gnosis-26539000.ssz  mainnet-13689000.json  mainnet-13689000.ssz  mainnet-signed-builder-bid-slot-14149070.json  mainnet-signed-builder-bid-slot-14149070.ssz  minimal-signed-blinded-block.json
tests/fixtures/: 13689000.json
