[package]
name = "grandine_py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for Grandine crates"

[lib]
name = "grandine_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
hex = "0.4"
grandine_bls   = { package = "bls",   git = "https://github.com/grandinetech/grandine.git", rev = "2.0.1", features = ["blst"] }
grandine_ssz = { package = "ssz", git = "https://github.com/grandinetech/grandine.git", rev = "2.0.1" }
grandine_types = { package = "types", git = "https://github.com/grandinetech/grandine.git", rev = "2.0.1" }
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typenum = "1.17"
